fix: move UtilityBar into breadcrumb row to fix click blocking on car pages
UtilityBar and breadcrumbs now share the same flex container instead of
overlapping via negative margin hack, fixing unclickable messengers and
language selectors.

--- a/front/src/app/scss/blocks/sections/_rent-page.scss
+++ b/front/src/app/scss/blocks/sections/_rent-page.scss
@@ -4,6 +4,19 @@ $rental-error-color: #d24b4b;
 $rental-success-color: #2f8f5b;
 
 .rent-page {
+  &__top-bar {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-top: 20px;
+    padding-bottom: 20px;
+
+    @include tablet {
+      padding-top: 15px;
+      padding-bottom: 5px;
+    }
+  }
+
   &__surface {
     display: flex;
     flex-direction: column;
