--- a/front/src/app/scss/blocks/sections/_single-section.scss
+++ b/front/src/app/scss/blocks/sections/_single-section.scss
@@ -2,25 +2,21 @@
 @use "../../mixins/disable-mob-hover" as *;
 
 .single-section__breadcrumb-row {
-  margin-top: -80px;
-  height: 80px;
   display: flex;
   align-items: center;
+  justify-content: space-between;
   padding-top: 20px;
-  pointer-events: none;
-
-  nav, a, li {
-    pointer-events: auto;
-  }
+  padding-bottom: 20px;
 
   @include tablet {
-    margin-top: 0;
-    height: auto;
     padding-top: 15px;
     padding-bottom: 5px;
   }
 
   .breadcrumbs {
+    flex-wrap: nowrap;
+    white-space: nowrap;
+
     @include for-mobile {
       position: relative;
       z-index: 1;
